# codeception

./: .gitignore  LICENSE  README.md  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: bump-version.sh  dev.sh  postinstall.js
server/: Cargo.toml
server/manager/: CLAUDE.md
server/src/: app.rs  cli.rs  config.rs  conversation.rs  conversation_ui.rs  groups.rs  history.rs  main.rs  manager.rs  model.rs  names.rs  new_session.rs  paths.rs  serve.rs  session.rs  summarizer.rs  ui.rs  view_ui.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/config/: route.ts
src/app/api/fs/list/: route.ts
src/app/api/groups/: route.ts
src/app/api/groups/[id]/: route.ts
src/app/api/manager/command/: route.ts
src/app/api/manager/message/: route.ts
src/app/api/manager/messages/: route.ts
src/app/api/manager/start/: route.ts
src/app/api/manager/status/: route.ts
src/app/api/sessions/: route.ts
src/app/api/sessions/[id]/: route.ts
src/app/api/sessions/[id]/focus/: route.ts
src/app/api/sessions/resumable/: route.ts
src/app/api/sessions/search/: route.ts
src/app/api/summarize/: route.ts
src/components/dashboard/: command-bar.tsx  conversation-view.tsx  directory-browser.tsx  filter-bar.tsx  group-manager.tsx  new-session-dialog.tsx  project-group.tsx  session-card.tsx  settings-panel.tsx  status-badge.tsx  voice-button.tsx
src/lib/: db.ts  scanner.ts  summarizer-prompts.ts  summarizer.ts  types.ts  use-notifications.ts  use-session-history.ts  use-settings.ts  use-websocket.ts
(+7 files in other folders)
