[package]
name = "recon"
version = "0.5.2"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
